fix: updated notification rabbitmq producer and listener